# cowmotics-aquarea

./: .gitignore  Readme.md
firmware/: .gitignore  CMakeLists.txt  Readme.md
firmware/main/: CMakeLists.txt  aquarea.c  aquarea.h  aquarea_ll.c  aquarea_ll.h  main.c
firmware/test/ut_aquarea_ll/: Makefile  driver_uart.c  driver_uart.h  log.c  log.h  main.c  test_cksum.c  test_init.c  test_rx.c
firmware/test/ut_aquarea_ll/include/: esp_err.h
firmware/test/ut_aquarea_ll/include/driver/: uart.h
hardware/: .gitignore
hardware/prj-kicad/: aquarea.kicad_sch  cowmotics-aquarea.kicad_pcb  cowmotics-aquarea.kicad_prl  cowmotics-aquarea.kicad_pro  cowmotics-aquarea.kicad_sch  cowmotics-aquarea.kicad_sym  ethernet.kicad_sch  fp-info-cache  fp-lib-table  mcu.kicad_sch  sym-lib-table
hardware/prj-kicad/cowmotics-aquarea.pretty/: CONN_615008185121.kicad_mod  CONN_691243310005.kicad_mod  CONN_SMA_RA.kicad_mod  QFN24.kicad_mod  QFN48-04.kicad_mod  Q_3.2x2.5.kicad_mod  Q_SMD5x3.kicad_mod  SMD0603.kicad_mod  SMD0805.kicad_mod  SMD1210.kicad_mod  SOT23-5.kicad_mod  SW_PTS840.kicad_mod  TP_SMD.kicad_mod  TR_W749013011.kicad_mod
hardware/prod/gerber/: cowmotics-aquarea-B_Cu.gbr  cowmotics-aquarea-B_Mask.gbr  cowmotics-aquarea-B_Paste.gbr  cowmotics-aquarea-B_Silkscreen.gbr  cowmotics-aquarea-Edge_Cuts.gbr  cowmotics-aquarea-F_Cu.gbr  cowmotics-aquarea-F_Mask.gbr  cowmotics-aquarea-F_Paste.gbr  cowmotics-aquarea-F_Silkscreen.gbr  cowmotics-aquarea-In1_Cu.gbr  cowmotics-aquarea-In2_Cu.gbr  cowmotics-aquarea-NPTH.drl  cowmotics-aquarea-PTH.drl  cowmotics-aquarea-job.gbrjob
